--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>pizzaB</title>
+    <title>pizzApp</title>
   </head>
   <body>
     <div class="page">
@@ -19,9 +19,7 @@
         <div class="navbar">
           <ul>
             <li><a href="/">Foo</a><span>d</span></li>
-            <li>
-              <a href="/about" class="selected">About </a><span>Us</span>
-            </li>
+            <li><a href="/about" class="selected">About </a><span>Us</span></li>
             <li><a href="#">Contact </a><span>Us</span></li>
           </ul>
         </div>
