--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>pizzApp</title>
   </head>
   <body>
     <form action="/admin/login" method="post">
+      <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
       <input type="text" name="username" placeholder="username" />
       <input type="password" name="password" placeholder="password" />
       <button type="submit">Login</button>
     </form>
+
     <form action="/admin/signup" method="post">
+      <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
       <input type="text" name="username" placeholder="username" />
       <input type="password" name="password" placeholder="password" />
       <button type="submit">Sign Up</button>
